--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,14 +1,32 @@
 site_name: MURPHY
 
+nav:
+  - Home: index.md
+  - Getting started: gettingstarted.md  
+  - Building: 
+    - Compilation: compiling.md
+    - Compilation Flags: compilationflags.md
+    - Dependencies: dependencies.md
+  - Developing:
+    - Development Guide: development-guide.md
+    - Custom Types: custom-types.md
+  - Background:
+    - Multiresolution grid: multiresolution-grids.md
+    - Implementation: implementation.md
+    - Immersed Interface: immersed-interface.md
+  - Performance: performance.md
+  - Demonstrations: demonstrations.md
+
 theme:
   name: material
   features:
-    - content.code.annotate
-
+    - content.code.annotate    
+    
 plugins:
   - search
 
 markdown_extensions:
+  - footnotes
   - pymdownx.highlight:
       anchor_linenums: true
   - pymdownx.inlinehilite
@@ -19,7 +37,11 @@ markdown_extensions:
   - pymdownx.tilde
   - pymdownx.arithmatex:
       generic: true
-
+  - attr_list
+  - md_in_html  
+  - pymdownx.emoji:
+      emoji_index: !!python/name:materialx.emoji.twemoji
+      emoji_generator: !!python/name:materialx.emoji.to_svg
 extra_javascript:
   - javascripts/mathjax.js
   - https://polyfill.io/v3/polyfill.min.js?features=es6
